fix some spacing issue

--- a/resources/assets/admin/styles/_globals.scss
+++ b/resources/assets/admin/styles/_globals.scss
@@ -990,7 +990,14 @@ label.el-radio, label.el-checkbox {
     overflow-y: scroll;
   }
 }
+
 // global setting
+.ff_global_setting_wrap{
+  .ff_layout_section_sidebar{
+   height: 100%;
+  } 
+}
+
 .ff_global_settings_option{
   overflow-y: scroll;
   height: 110vh;
