--- a/resources/assets/admin/styles/editor.scss
+++ b/resources/assets/admin/styles/editor.scss
@@ -581,6 +581,10 @@ div.mce-inline-toolbar-grp.mce-arrow-up,
 
 .conditional-logic {
   margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
 }
 
 .condition-value,
